remove justify content to fix cutoff

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     background: #F5DEB3;
 }
 
-.header { 
+.title {   
     display: flex;
     justify-content: center;
     color: black;
@@ -19,36 +19,22 @@ body {
     font-weight: 600;
 
 }
+
+
 .mainDrinkContainer { /* drink container */
     display: flex;
-    justify-content: center;
     overflow-x: hidden;
     overflow-y: hidden;
     cursor: grab;
 }
 
-.searchContainer {
-    display: flex;
-    justify-content: center;
-    margin: 2px;
 
-
-}
-.inputText{
-    font-size:14px;
-}
-.buttonContainer{
-    display: flex;
-
-}
- .randomButton, .searchButton{
-    margin-left: 1px;
-}
 .thumbnail-image {
-    width: 25vw;
     height: 40vh; 
     border-radius: 5%;
+
 }
+
 .drinkDetail {
     display: flex;
     flex-direction: column;
@@ -57,6 +43,27 @@ body {
     color: black;
     justify-content: center;
 }
+
+.searchContainer {
+    display: flex;
+    justify-content: center;
+    margin: 2px;
+    
+}
+
+.inputText{
+    font-size:14px;
+}
+
+.buttonContainer{
+    display: flex;
+
+}
+
+ .randomButton, .searchButton{
+    margin-left: 1px;
+}
+
 
 .footer {
     display: flex;
@@ -67,31 +74,33 @@ body {
     color:gray;
     font-size: 12px;
 }
+
 .apiLink:hover {
     color: black;
 }
 
-@media (max-width: 900px) {
-    .header{
+@media (max-width: 1000px) {
+    .title{
         font-size: 4rem;
     }
+
     .mainDrinkContainer {
-        flex-direction: column;
+        display: block;
         overflow-y: auto;
-       
+
     }
 
     .searchContainer{
         justify-content: space-around;
     }
     .thumbnail-image {
-        width: 90vw;
-        height: 90vw;
-    }
+        
 
+    }
 
     .drinkDetail{
         padding: 2vw;
+        width: 90vw;
     }
     .readButton, .searchButton, .randomButton{
 
